# Boomaga-IPP

./: .gitignore  BIPP-project-policy.yaml  CLAUDE.md  Cargo.toml  Claude Correction Log--2026-06-24.txt  PROJECT_PLAN.md  README.md
.claude/: settings.json  settings.local.json
.claude/commands/: .gitignore  handoff.md
.claude/hooks/: pre-compact.sh  session-start.sh
.claude/skills/handoff/: SKILL.md
boomaga-config/: README.md
crates/boomaga-config/: Cargo.toml
crates/boomaga-config/src/: backend_config.rs  defaults.rs  lib.rs  preview_config.rs  settings.rs
crates/boomaga-core/: Cargo.toml
crates/boomaga-core/src/: constants.rs  document.rs  error.rs  job.rs  lib.rs  printer.rs
crates/boomaga-ipc/: Cargo.toml
crates/boomaga-ipc/src/: d_bus.rs  lib.rs  notifier.rs  protocol.rs  transport.rs
crates/boomaga-ipp-backend/: Cargo.toml
crates/boomaga-ipp-backend/src/: job_processor.rs  job_queue.rs  main.rs  server.rs
crates/boomaga-layout-engine/: Cargo.toml
crates/boomaga-layout-engine/src/: booklet.rs  lib.rs  n_up.rs  transforms.rs
crates/boomaga-layout-engine/src/imposition/: layout_template.rs  mod.rs  template.rs
crates/boomaga-plugins/: Cargo.toml
crates/boomaga-plugins/src/: lib.rs  loader.rs
crates/boomaga-plugins/src/api/: mod.rs
crates/boomaga-plugins/src/core/: mod.rs  plugin.rs
crates/boomaga-preview/: Cargo.toml
crates/boomaga-preview/src/: app.rs  app_xilem.rs  document_renderer.rs  document_renderer_xilem.rs  document_view.rs  ipc_worker.rs  main.rs  main_xilem.rs  menu_bar.rs  pdf_canvas.rs  print_dialog.rs  render_worker.rs  toolbar.rs  viewer.rs  window.rs
crates/boomaga-preview/src/handlers/: document.rs  mod.rs  navigation.rs
crates/boomaga-preview/src/viewer/: document_view.rs
crates/boomaga-preview/src/widgets/: document_viewer.rs  mod.rs  page_container.rs
docs/: HANDOFF.md  PROJECT_PLAN.md  XILEM_MIGRATION.md
docs/uml/: C1-component-pg1.puml  C1-component-pg2.puml  C1-component.puml  C2-class-pg1.puml  C2-class-pg2.puml  C2-class-pg3.puml  C2-class-pg4.puml  C2-class-pg5.puml  C2-class-pg6.puml  C2-class-pg7.puml  C2-class.puml  C3-sequence.puml  C4-usecase.puml
openshell/: BIPP-project-policy--Claude.yaml  BIPP-project-policy--Codex.yaml  README.md  create-bipp-sandbox--Claude.sh  create-bipp-sandbox--Codex.sh  create-bipp-sandbox.sh
openshell/claude/: create-bipp-sandbox--Claude.sh
openshell/codex/: BIPP-project-policy--Codex.yaml  README.md  bootstrap.sh  create-bipp-sandbox--Codex.sh  run.sh
openshell/sandbox/: Dockerfile  README.md  bipp-bootstrap.sh
