[package]
name = "boomaga-config"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Configuration management for boomaga virtual printer"

[dependencies]
boomaga-core = { path = "../boomaga-core" }
serde = "1.0"
serde_json = "1.0"
config = "0.14"
directories = "5.0"
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
