[package]
name = "boomaga-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core shared logic for boomaga virtual printer"

[dependencies]
thiserror.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
uuid = { workspace = true, features = ["v4"] }

[dev-dependencies]
tempfile = "3.10"
