[package]
name = "boomaga-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core shared logic for boomaga virtual printer"

[dependencies]
thiserror = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true, features = ["v4", "serde"] }
qpdf = "0.3.5"

[dev-dependencies]
tempfile = "3.10"
