[package]
name = "boomaga-ipp-backend"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "IPP server for boomaga virtual printer"

[[bin]]
name = "boomaga-ipp-backend"
path = "src/main.rs"

[dependencies]
boomaga-core = { path = "../boomaga-core" }
zbus = { workspace = true }
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
directories = { workspace = true }
nix = { version = "0.29", features = ["socket", "resource"] }
