[package]
name = "boomaga-layout-engine"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Page layout algorithms for boomaga virtual printer"

[dependencies]
boomaga-core = { path = "../boomaga-core" }
thiserror = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tracing = { workspace = true }
num-traits = "0.2"

[dev-dependencies]
approx = "0.5"
