[package]
name = "boomaga-preview"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Preview application for boomaga virtual printer"

[[bin]]
name = "boomaga-preview"
path = "src/main.rs"

[dependencies]
boomaga-core = { path = "../boomaga-core" }
druid = { workspace = true }
cairo-rs = { workspace = true }
poppler = "0.6"
tokio = { workspace = true, features = ["full"] }
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tracing = { workspace = true }
thiserror = { workspace = true }
url = "2.5"
chrono = "0.4"
tempfile = "3.10"
