[package]
name = "boomaga-preview"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Preview application for boomaga virtual printer"

[[bin]]
name = "boomaga-preview"
path = "src/main.rs"

[dependencies]
boomaga-core = { path = "../boomaga-core" }
boomaga-config = { path = "../boomaga-config" }
druid = { workspace = true }
cairo-rs = { workspace = true }
poppler = { workspace = true }
tokio = { workspace = true, features = ["full"] }
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }
chrono = { workspace = true }
tempfile = { workspace = true }
